<resources>
    <string name="Sets">Sets</string>
    <string name="add">Add</string>
    <string name="app_name">PPL Helper</string>
    <string name="delete">Delete</string>
    <string name="dummyExercise1">exercise1</string>
    <string name="dummyExercise2">exercise2</string>
    <string name="dummyExercise3">exercise3</string>
    <string name="dummyRepData">Z</string>
    <string name="dummySetData">Y / Y</string>
    <string name="dummyWeight1">Weight1</string>
    <string name="dummyWeight2">weight2</string>
    <string name="dummyWeight3">weight3</string>
    <string name="dummyWeightData">X</string>
    <string name="dummy_exercise_set_x_rep">\"Set\"x\"Rep\" \"Exercise\"</string>
    <string name="dummy_next_exercise">Next Exercise</string>
    <string name="dummy_set1_x_rep1">set1xrep1</string>
    <string name="dummy_set2_x_rep2">set2xrep2</string>
    <string name="dummy_set3_x_rep3">set3xrep3</string>
    <string name="edit">EDIT</string>
    <string name="exercise">Exercise</string>
    <string name="find">Find</string>
    <string name="get_started">GET STARTED</string>
    <string name="history">HISTORY</string>
    <string name="now">NOW</string>
    <string name="ppl_logo">PPL Logo</string>
    <string name="repititions">Repititions</string>
    <string name="save">SAVE</string>
    <string name="set">Set</string>
    <string name="setButtonText">Done With Set</string>
    <string name="set_x_rep">Set x Rep</string>
    <string name="up_next">UP NEXT</string>
    <string name="weight">Weight</string>
    <string name="welcome_message">Welcome to the Push, Pull, Legs workout routine!\n If you\'re already familiar, this app should enable you to improve your progress and tracking. If you aren\'t, we\'ll set up a workout for you that you can alter to fit your needs.</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="legs">Legs</string>
    <string name="stopwatch">Stopwatch:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="time">time</string>
    <string name="voice_memos">Voice Memos</string>
    <string name="recording_name">Recording name:</string>
    <string name="record">record</string>
    <string name="stop_record">stop record</string>
    <string name="play">play</string>
    <string name="stop_play">stop play</string>
    <string name="playing_name">Playing name:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="list_all_files">List All Files</string>
</resources>
