<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.achurm.pplhelper.ExerciseListScreen">

    <LinearLayout
        android:id="@+id/buttonBar2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/pushButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:onClick="pplButtonClick"
            android:text="@string/push"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/pullButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:onClick="pplButtonClick"
            android:text="@string/pull"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/legsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:onClick="pplButtonClick"
            android:text="@string/legs"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameEx1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/dummy_exercise_set_x_rep"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/favEx1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@android:drawable/btn_star"
                    android:onClick="onFavoriteButtonClick" />

                <Button
                    android:id="@+id/editEx1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="onEditButtonClick"
                    android:text="@string/edit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameEx2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/dummy_exercise_set_x_rep"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/favEx2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@android:drawable/btn_star"
                    android:onClick="onFavoriteButtonClick" />

                <Button
                    android:id="@+id/editEx2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="onEditButtonClick"
                    android:text="@string/edit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameEx3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/dummy_exercise_set_x_rep"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/favEx3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@android:drawable/btn_star"
                    android:onClick="onFavoriteButtonClick" />

                <Button
                    android:id="@+id/editEx3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="onEditButtonClick"
                    android:text="@string/edit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameEx4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/dummy_exercise_set_x_rep"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/favEx4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@android:drawable/btn_star"
                    android:onClick="onFavoriteButtonClick" />

                <Button
                    android:id="@+id/editEx4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="onEditButtonClick"
                    android:text="@string/edit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameEx5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/dummy_exercise_set_x_rep"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/favEx5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@android:drawable/btn_star"
                    android:onClick="onFavoriteButtonClick" />

                <Button
                    android:id="@+id/editEx5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="onEditButtonClick"
                    android:text="@string/edit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameEx6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/dummy_exercise_set_x_rep"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/favEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@android:drawable/btn_star"
                    android:onClick="onFavoriteButtonClick" />

                <Button
                    android:id="@+id/editEx6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="onEditButtonClick"
                    android:text="@string/edit" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/SAVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onSaveButtonClick"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
